[gd_scene load_steps=27 format=3 uid="uid://c2mvnwuqmyoqx"]

[ext_resource type="Texture2D" uid="uid://tx6k5xu4oo1l" path="res://Assets/sprites/objects/chest_01.png" id="1_yiogm"]
[ext_resource type="Script" uid="uid://c68xua3kkhhog" path="res://Scripts/bau_com_senha.gd" id="1_yxk8e"]
[ext_resource type="FontFile" uid="uid://ddg4g8l4pxlch" path="res://fonts/equipment-pro-v1.1/EquipmentPro.ttf" id="2_yxk8e"]
[ext_resource type="Texture2D" uid="uid://culibketdo1ap" path="res://Assets/Ninja Adventure - Asset Pack/Ui/Theme/nine_path_2.png" id="4_aq27e"]
[ext_resource type="Texture2D" uid="uid://bwkh3ribf43kn" path="res://Assets/Ninja Adventure - Asset Pack/Ui/Theme/Theme1/button_hover.png" id="5_jo2b4"]
[ext_resource type="Texture2D" uid="uid://duhyptkq6ohta" path="res://Assets/Ninja Adventure - Asset Pack/Ui/Theme/Theme1/button_pressed.png" id="6_7laic"]
[ext_resource type="Texture2D" uid="uid://bxlbohlyn6dx8" path="res://Assets/Ninja Adventure - Asset Pack/Ui/Theme/Theme1/button_normal.png" id="7_gwnbs"]
[ext_resource type="Texture2D" uid="uid://ddml7885bpigk" path="res://Assets/Ninja Adventure - Asset Pack/Ui/Theme/Theme1/checked.png" id="8_7laic"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_at43r"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7laic"]
texture = ExtResource("4_aq27e")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jo2b4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_31rjw"]
texture = ExtResource("5_jo2b4")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_73jdu"]
texture = ExtResource("6_7laic")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sjvyv"]
texture = ExtResource("7_gwnbs")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gwnbs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7laic"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_73jdu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_31rjw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0q46d"]
atlas = ExtResource("1_yiogm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_at43r"]
atlas = ExtResource("1_yiogm")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxk8e"]
atlas = ExtResource("1_yiogm")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlmok"]
atlas = ExtResource("1_yiogm")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_aq27e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0q46d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_at43r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxk8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlmok")
}],
"loop": false,
"name": &"open",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nlmok"]
size = Vector2(28, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yxk8e"]
size = Vector2(35, 36)

[sub_resource type="AudioStream" id="AudioStream_7laic"]

[node name="Bau" type="StaticBody2D" node_paths=PackedStringArray("animate", "campo_pass")]
script = ExtResource("1_yxk8e")
animate = NodePath("AnimatedSprite2D")
campo_pass = NodePath("LineEdit")

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
z_index = 16
offset_left = -95.0
offset_top = -34.0
offset_right = 116.0
offset_bottom = -3.0
theme_override_fonts/font = ExtResource("2_yxk8e")
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_at43r")
theme_override_styles/normal = SubResource("StyleBoxTexture_7laic")
placeholder_text = "Digite a senha para abrir o bau"
alignment = 1

[node name="Button" type="Button" parent="LineEdit"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -13.5
offset_right = 29.0
offset_bottom = 14.5
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_yxk8e")
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_jo2b4")
theme_override_styles/hover = SubResource("StyleBoxTexture_31rjw")
theme_override_styles/pressed = SubResource("StyleBoxTexture_73jdu")
theme_override_styles/normal = SubResource("StyleBoxTexture_sjvyv")
text = "OK"

[node name="Button2" type="Button" parent="LineEdit"]
layout_mode = 1
offset_left = 1.0
offset_top = -18.0
offset_right = 17.0
theme_override_icons/icon = ExtResource("8_7laic")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gwnbs")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7laic")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_73jdu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_31rjw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, 11)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_aq27e")
animation = &"open"
frame = 3
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 14)
shape = SubResource("RectangleShape2D_nlmok")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(1, 17)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_yxk8e")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStream_7laic")

[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="LineEdit/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="LineEdit/Button2" to="." method="_on_button_2_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
